[gd_scene load_steps=27 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Jump4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=10]
[ext_resource path="res://MoonBackgrounPixelJumper.tscn" type="PackedScene" id=11]
[ext_resource path="res://LifeCounter.tscn" type="PackedScene" id=12]
[ext_resource path="res://CoinCounter.tscn" type="PackedScene" id=13]
[ext_resource path="res://NoKey.tscn" type="PackedScene" id=14]
[ext_resource path="res://NoKey.gd" type="Script" id=15]
[ext_resource path="res://HealthGauge.tscn" type="PackedScene" id=16]
[ext_resource path="res://Sprites/Comfortaa-Bold.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://KillButton.tscn" type="PackedScene" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0

[sub_resource type="DynamicFont" id=3]
size = 160
extra_spacing_char = 6
font_data = ExtResource( 17 )

[sub_resource type="Curve" id=4]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Gradient" id=6]

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
trail_color_modifier = SubResource( 7 )
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 4.58533e-41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
angle_curve = SubResource( 5 )
scale = 1.3
scale_random = 1.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.269635, 4.91245 )
scale = Vector2( 1.44922, 1.44815 )
z_index = -1
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.25, 1.25 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="BackgroundLayer" parent="." instance=ExtResource( 11 )]

[node name="LifeCounter" parent="." instance=ExtResource( 12 )]
margin_left = -390.0
margin_top = -230.0
margin_right = -282.0
margin_bottom = -177.0

[node name="CoinCounter" parent="." instance=ExtResource( 13 )]
margin_left = -390.0
margin_top = -195.0
margin_right = -282.0
margin_bottom = -142.0

[node name="KeyImage" parent="." instance=ExtResource( 14 )]
margin_left = -405.0
margin_top = -160.0
margin_right = -297.0
margin_bottom = -107.0
rect_scale = Vector2( 0.75, 0.75 )
script = ExtResource( 15 )

[node name="Gauge" parent="." instance=ExtResource( 16 )]
margin_left = -330.0
margin_top = -230.0
margin_right = 66.0
margin_bottom = -177.0

[node name="Label" type="Label" parent="."]
margin_left = -383.0
margin_top = -96.0
margin_right = 385.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 1.25
autostart = true

[node name="DustParticlesRunningRight" type="Particles2D" parent="."]
modulate = Color( 0.441176, 0.355176, 0.220706, 1 )
position = Vector2( -5, 31 )
rotation = 1.74533
scale = Vector2( 3, 3 )
emitting = false
amount = 5
lifetime = 0.5
speed_scale = 3.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 8 )

[node name="DustParticlesRunningLeft" type="Particles2D" parent="."]
modulate = Color( 0.441176, 0.355176, 0.220706, 1 )
position = Vector2( -5, 31 )
rotation = -1.74533
scale = Vector2( 3, 3 )
emitting = false
amount = 5
lifetime = 0.5
speed_scale = 3.0
randomness = 1.0
process_material = SubResource( 8 )

[node name="KillButton" parent="." instance=ExtResource( 18 )]
margin_left = 335.0
margin_top = -240.0
margin_right = 388.0
margin_bottom = -205.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="KillButton" to="." method="_on_KillButton_pressed"]
